welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:5: error: ';' expected but 'else' found.
  else {for (i <- 1 to nbPas){recule()}}
  ^